--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -75,7 +75,7 @@ body {
   line-height: 1.5;
   color: #343a40;
   text-align: left;
-  background-color: #fff; }
+  background-color: #383838; }
 
 /* line 73, node_modules/bootstrap/scss/_reboot.scss */
 [tabindex="-1"]:focus {
