--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7027,7 +7027,7 @@ button.bg-gray200:focus {
 
 /* line 13, node_modules/bootstrap/scss/utilities/_background.scss */
 .bg-white {
-  background-color: #fff !important; }
+  background-color: #383838 !important; }
 
 /* line 17, node_modules/bootstrap/scss/utilities/_background.scss */
 .bg-transparent {
