--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -73,7 +73,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #343a40;
+  color: #d8d8d8;
   text-align: left;
   background-color: #383838; }
 
