--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -13,5 +13,5 @@
     <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/about.html"><img class="rounded-circle mr-2" src="{{site.baseurl}}/{{site.avatar}}" width="30"><span class="align-middle">About</span></a>
+    <a class="nav-link" href="{{site.baseurl}}/about.html">About</a>
 </li>
