--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4974,7 +4974,7 @@ input[type="button"].btn-block {
           flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: #383838;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem; }
@@ -5543,7 +5543,7 @@ input[type="button"].btn-block {
   .badge-gray200[href]:hover, .badge-gray200[href]:focus {
     color: #212529;
     text-decoration: none;
-    background-color: #d5d5d5; }
+    background-color: #383838; }
 
 /* line 1, node_modules/bootstrap/scss/_jumbotron.scss */
 .jumbotron {
