--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,10 @@ layout: default
                 
     			<article class="card">
                     
+                 {% if page.image %} 
+                    <img class="card-img-top mb-2" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" alt="{{ page.title }}"> 
+                {% endif %}
+                    
     			<div class="card-body">
                     
     				<h1 class="display-4">
