--- a/_includes/footer-copyright.html
+++ b/_includes/footer-copyright.html
@@ -3,8 +3,7 @@
   https://www.wowthemes.net/freebies-license/
 -->
 
-<p>
-    
+<!-- <p>
 <span class="credits"> 
     
 	<a target="_blank" class="text-dark" href="https://www.wowthemes.net/pintereso-free-bootstrap-jekyll-theme/">
@@ -12,20 +11,19 @@
 	</a>
     
 </span>
-    
-</p>
+</p> -->
 
 <p>
-    <a class="text-muted" href="{{site.url}}{{site.baseurl}}/">
+    <a style="color: white;" href="{{site.url}}{{site.baseurl}}/">
         &copy;  {{site.name}}. 
     </a>
     
-    <a class="text-muted" href="{{site.url}}{{site.baseurl}}/privacy-policy.html">
+    <a style="color: white;" href="{{site.url}}{{site.baseurl}}/privacy-policy.html">
         Privacy Policy.
     </a>
     
-    <a class="text-muted" target="_blank" href="https://www.wowthemes.net/freebies-license/">
+    <!-- <a class="text-muted" target="_blank" href="https://www.wowthemes.net/freebies-license/">
         License.
-    </a>
+    </a> -->
     
 </p>
