--- a/_includes/menu-categories.html
+++ b/_includes/menu-categories.html
@@ -1,7 +1,7 @@
 <!-- Don't edit anything here, categories are dynamically generated -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white pl-2 pr-2">
-    <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExplore" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark pl-2 pr-2">
+    <button class="navbar-dark navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExplore" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarsExplore">
