--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -66,16 +66,16 @@ function lunr_search(term) {
 }
 </script>
 <style>
-    .lunrsearchresult .title {color: #d9230f;}
-    .lunrsearchresult .url {color: silver;}
-    .lunrsearchresult a {display: block; color: #777;}
-    .lunrsearchresult a:hover, .lunrsearchresult a:focus {text-decoration: none;}
-    .lunrsearchresult a:hover .title {text-decoration: underline;}
+    .lunrsearchresult .title {color: white;}
+    .lunrsearchresult .url {color:white;}
+    .lunrsearchresult a {display: block; color: white;}
+    /* .lunrsearchresult a:hover, .lunrsearchresult a:focus {text-decoration: none;}
+    .lunrsearchresult a:hover .title {text-decoration: underline;} */
 </style>
 
 
 
 
 <form class="bd-search hidden-sm-down" onSubmit="return lunr_search(document.getElementById('lunrsearch').value);">
-<input type="text" class="form-control bg-graylight border-0 font-weight-bold"  id="lunrsearch" name="q" value="" placeholder="Type and hit enter..."> 
+<input class="form-control border-0 font-weight-bold"  id="lunrsearch" name="q" value="" placeholder="Type and hit enter..."> 
 </form>
