--- a/_includes/tracking-footer.html
+++ b/_includes/tracking-footer.html
@@ -2,11 +2,11 @@
 
 
 <!-- AddThis, replace this with your own code from https://www.addthis.com/ --> 
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b15193f169714ca"></script>
+<!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b15193f169714ca"></script> -->
 
 
 <!-- Pinterest Script, nothing for you to replace here  --> 
-<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+<!-- <script async defer src="//assets.pinterest.com/js/pinit.js"></script> -->
 
 <!-- Cookie Consent, nothing for you to replace here. Remove it if you want  -->
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
@@ -16,11 +16,11 @@ window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
     "popup": {
-      "background": "#eb6c44",
+      "background": "#999999",
       "text": "#ffffff"
     },
     "button": {
-      "background": "#f5d948"
+      "background": "#555555"
     }
   },
   "position": "bottom-left",
