--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,25 +22,25 @@
     
 </head>
     
-<body>
+<body class="bg-dark text-white">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/index.html"><img src="{{site.baseurl}}/{{site.logo}}"></a>
-    <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-dark navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarsDefault">        
-    	<ul class="navbar-nav mr-auto align-items-center">            	
-    	</ul>
+    	<!-- <ul class="navbar-nav mr-auto align-items-center">            
+            {% include search-lunr.html %}    		
+    	</ul> -->
     	<ul class="navbar-nav ml-auto align-items-center">
     		{% include menu-header.html %}
     	</ul>
     </div>
-    </nav>
-    
-    <div id="lunrsearchresults">
+    </nav>     
+<!-- <div id="lunrsearchresults">
         <ul class="mb-0"></ul>
-    </div>
+    </div> -->
     
     <main role="main">        
         {{ content }}        
@@ -64,7 +64,7 @@
     
     <script src="{{site.baseurl}}/assets/js/theme.js"></script>
     
-    <script src="{{site.baseurl}}/assets/js/lunr.js"></script>
+    <!-- <script src="{{site.baseurl}}/assets/js/lunr.js"></script> -->
     
     {% include tracking-footer.html %}
     
