--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,17 @@
 ---
 layout: default
 ---
-<section class="bg-gray200 pt-5 pb-5">    
+<section class="pt-5 pb-5">    
     <div class="container">
     	<div class="row justify-content-center">
     		<div class="col-md-8">
                 
-    			<article class="card">
+    			<article class="card-no-hover">
                     
                  {% if page.image %} 
+                    <span class="pinme">
+                        <a data-pin-do="buttonPin" data-pin-tall="true" href="https://www.pinterest.com/pin/create/button/?url={{site.url}}{{site.baseurl}}{{page.url}}&media={{site.url}}{{site.baseurl}}/{{page.image}}&description={{ page.title }}- {{ page.content | strip_html | truncatewords:25 }}"></a>
+                    </span>
                     <img class="card-img-top mb-2" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" alt="{{ page.title }}"> 
                 {% endif %}
                     
@@ -40,7 +43,6 @@ layout: default
                         # {{ category | downcase }}
                       </a>
                     {% endfor %}
-                    
                     
     			</div>  
                     
