--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -73,9 +73,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #d8d8d8;
+  color: #343a40;
   text-align: left;
-  background-color: #383838; }
+  background-color: #fff; }
 
 /* line 73, node_modules/bootstrap/scss/_reboot.scss */
 [tabindex="-1"]:focus {
@@ -171,26 +171,26 @@ sup {
 
 /* line 198, node_modules/bootstrap/scss/_reboot.scss */
 a {
-  color: #bd081c;
+  color: white;
   text-decoration: none;
   background-color: transparent;
-  -webkit-text-decoration-skip: objects; }
+  /* -webkit-text-decoration-skip: objects; */
+}
   /* line 13, node_modules/bootstrap/scss/mixins/_hover.scss */
-  a:hover {
-    color: #740511;
-    text-decoration: underline; }
+a:hover {
+  color: white;
+  text-decoration: none;
+  background-color: transparent;
+}
 
-/* line 216, node_modules/bootstrap/scss/_reboot.scss */
 a:not([href]):not([tabindex]) {
   color: inherit;
   text-decoration: none; }
-  /* line 17, node_modules/bootstrap/scss/mixins/_hover.scss */
-  a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
-    color: inherit;
-    text-decoration: none; }
-  /* line 225, node_modules/bootstrap/scss/_reboot.scss */
-  a:not([href]):not([tabindex]):focus {
-    outline: 0; }
+a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+  color: inherit;
+  text-decoration: none; }
+a:not([href]):not([tabindex]):focus {
+  outline: 0; }
 
 /* line 235, node_modules/bootstrap/scss/_reboot.scss */
 pre,
@@ -2041,7 +2041,7 @@ pre {
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid black;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2060,10 +2060,11 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #f74d60;
+    border-color: #999;
+    border-width: 1px;
     outline: 0;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(189, 8, 28, 0.25);
-            box-shadow: 0 0 0 0.2rem rgba(189, 8, 28, 0.25); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(150,150,150, 0.25);
+            box-shadow: 0 0 0 0.2rem rgba(150,150,150, 0.25); }
   /* line 40, node_modules/bootstrap/scss/_forms.scss */
   .form-control::-webkit-input-placeholder {
     color: #6c757d;
@@ -2645,65 +2646,32 @@ fieldset:disabled a.btn {
 
 /* line 64, node_modules/bootstrap/scss/_buttons.scss */
 .btn-success {
+  color: black;
+  background-color: darkgray;
+  border-style: none;
+  text-align: right;
+}
+.btn-success:hover {
   color: #fff;
-  background-color: #24b47e;
-  border-color: #24b47e; }
-  /* line 13, node_modules/bootstrap/scss/mixins/_hover.scss */
-  .btn-success:hover {
-    color: #fff;
-    background-color: #1e9468;
-    border-color: #1c8a60; }
-  /* line 18, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-success:focus, .btn-success.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5); }
-  /* line 29, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-success.disabled, .btn-success:disabled {
-    color: #fff;
-    background-color: #24b47e;
-    border-color: #24b47e; }
-  /* line 36, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
+  background-color: #6c757d 
+}
+/* line 18, node_modules/bootstrap/scss/mixins/_buttons.scss */
+.btn-success:focus, .btn-success.focus {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5); }
+/* line 29, node_modules/bootstrap/scss/mixins/_buttons.scss */
+.btn-success.disabled, .btn-success:disabled {
+  color: #495057;}
+
+  /* .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
   .show > .btn-success.dropdown-toggle {
     color: #fff;
     background-color: #1c8a60;
     border-color: #197f59; }
-    /* line 46, node_modules/bootstrap/scss/mixins/_buttons.scss */
     .btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
     .show > .btn-success.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5);
-              box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5); }
-
-/* line 64, node_modules/bootstrap/scss/_buttons.scss */
-.btn-info {
-  color: #212529;
-  background-color: #46f8ff;
-  border-color: #46f8ff; }
-  /* line 13, node_modules/bootstrap/scss/mixins/_hover.scss */
-  .btn-info:hover {
-    color: #212529;
-    background-color: #20f7ff;
-    border-color: #13f6ff; }
-  /* line 18, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-info:focus, .btn-info.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(70, 248, 255, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(70, 248, 255, 0.5); }
-  /* line 29, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-info.disabled, .btn-info:disabled {
-    color: #212529;
-    background-color: #46f8ff;
-    border-color: #46f8ff; }
-  /* line 36, node_modules/bootstrap/scss/mixins/_buttons.scss */
-  .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
-  .show > .btn-info.dropdown-toggle {
-    color: #212529;
-    background-color: #13f6ff;
-    border-color: #06f6ff; }
-    /* line 46, node_modules/bootstrap/scss/mixins/_buttons.scss */
-    .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus,
-    .show > .btn-info.dropdown-toggle:focus {
-      -webkit-box-shadow: 0 0 0 0.2rem rgba(70, 248, 255, 0.5);
-              box-shadow: 0 0 0 0.2rem rgba(70, 248, 255, 0.5); }
+              box-shadow: 0 0 0 0.2rem rgba(36, 180, 126, 0.5); } */
 
 /* line 64, node_modules/bootstrap/scss/_buttons.scss */
 .btn-warning {
@@ -4470,12 +4438,10 @@ input[type="button"].btn-block {
 /* line 14, node_modules/bootstrap/scss/_nav.scss */
 .nav-link {
   display: block;
-  padding: 0.5rem 1rem; 
-  color: #d8d8d8;}
+  padding: 0.5rem 1rem; }
   /* line 17, node_modules/bootstrap/scss/mixins/_hover.scss */
   .nav-link:hover, .nav-link:focus {
-    text-decoration: none; 
-    color: #c8c8c8;}
+    text-decoration: none; }
   /* line 23, node_modules/bootstrap/scss/_nav.scss */
   .nav-link.disabled {
     color: #6c757d; }
@@ -4965,7 +4931,7 @@ input[type="button"].btn-block {
       color: #fff; }
 
 /* line 5, node_modules/bootstrap/scss/_card.scss */
-.card {
+.card, .card-hover {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4976,22 +4942,30 @@ input[type="button"].btn-block {
           flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #383838;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem; }
-  /* line 16, node_modules/bootstrap/scss/_card.scss */
-  .card > hr {
-    margin-right: 0;
-    margin-left: 0; }
-  /* line 22, node_modules/bootstrap/scss/_card.scss */
-  .card > .list-group:first-child .list-group-item:first-child {
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem; }
-  /* line 28, node_modules/bootstrap/scss/_card.scss */
-  .card > .list-group:last-child .list-group-item:last-child {
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem; }
+  border-radius: 0.25rem;
+  border-bottom: calc(0.25rem - 1px);
+  padding-bottom: 1.25rem;
+}
+
+.card-hover {
+  filter: saturate(0);
+}
+
+.card-hover:hover {
+  transition: all ease 0.2s;
+  filter: saturate(1);
+  transform: scale(1.01);
+}
+
+/* .card > hr {
+  margin-right: 0;
+  margin-left: 0; }
+.card > .list-group:first-child .list-group-item:first-child {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem; }
+.card > .list-group:last-child .list-group-item:last-child {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem; } */
 
 /* line 34, node_modules/bootstrap/scss/_card.scss */
 .card-body {
@@ -5000,14 +4974,20 @@ input[type="button"].btn-block {
           flex: 1 1 auto;
   padding: 1.25rem; }
 
-/* line 41, node_modules/bootstrap/scss/_card.scss */
-.card-title {
-  margin-bottom: 0.75rem; }
-
 /* line 45, node_modules/bootstrap/scss/_card.scss */
-.card-subtitle {
+div.card-title {
+  color: black;
   margin-top: -0.375rem;
   margin-bottom: 0; }
+
+.card-title h4 {
+  padding-top: 1em;
+  font-size: large;
+  font-weight: 700;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-style: normal;
+  margin: 0%;
+  }
 
 /* line 50, node_modules/bootstrap/scss/_card.scss */
 .card-text:last-child {
@@ -5055,20 +5035,12 @@ input[type="button"].btn-block {
   margin-right: -0.625rem;
   margin-left: -0.625rem; }
 
-/* line 113, node_modules/bootstrap/scss/_card.scss */
-.card-img-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1.25rem; }
-
 /* line 122, node_modules/bootstrap/scss/_card.scss */
 .card-img {
   width: 100%;
-  border-radius: calc(0.25rem - 1px); }
-
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+}
 /* line 128, node_modules/bootstrap/scss/_card.scss */
 .card-img-top {
   width: 100%;
@@ -5194,78 +5166,22 @@ input[type="button"].btn-block {
           .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
             border-radius: 0; } }
 
-/* line 257, node_modules/bootstrap/scss/_card.scss */
-.card-columns .card {
-  margin-bottom: 0.75rem; }
-
 @media (min-width: 576px) {
   /* line 256, node_modules/bootstrap/scss/_card.scss */
   .card-columns {
-    -webkit-column-count: 5;
-            column-count: 5;
+    -webkit-column-count: 4;
+            column-count: 4;
     -webkit-column-gap: 1.25rem;
             column-gap: 1.25rem;
     orphans: 1;
     widows: 1; }
-    /* line 267, node_modules/bootstrap/scss/_card.scss */
-    .card-columns .card {
-      display: inline-block;
-      width: 100%; } }
-
-/* line 280, node_modules/bootstrap/scss/_card.scss */
-.accordion .card:not(:first-of-type):not(:last-of-type) {
-  border-bottom: 0;
-  border-radius: 0; }
-
-/* line 286, node_modules/bootstrap/scss/_card.scss */
-.accordion .card:not(:first-of-type) .card-header:first-child {
-  border-radius: 0; }
-
-/* line 291, node_modules/bootstrap/scss/_card.scss */
-.accordion .card:first-of-type {
-  border-bottom: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0; }
-
-/* line 297, node_modules/bootstrap/scss/_card.scss */
-.accordion .card:last-of-type {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0; }
-
-/* line 1, node_modules/bootstrap/scss/_breadcrumb.scss */
-.breadcrumb {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0.75rem 1rem;
-  margin-bottom: 1rem;
-  list-style: none;
-  background-color: #eee;
-  border-radius: 0.25rem; }
-
-/* line 13, node_modules/bootstrap/scss/_breadcrumb.scss */
-.breadcrumb-item + .breadcrumb-item {
-  padding-left: 0.5rem; }
-  /* line 16, node_modules/bootstrap/scss/_breadcrumb.scss */
-  .breadcrumb-item + .breadcrumb-item::before {
+  /* line 267, node_modules/bootstrap/scss/_card.scss */
+  .card-columns .card-hover {
     display: inline-block;
-    padding-right: 0.5rem;
-    color: #6c757d;
-    content: "/"; }
+    width: 100%; } }
 
-/* line 30, node_modules/bootstrap/scss/_breadcrumb.scss */
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: underline; }
-
-/* line 34, node_modules/bootstrap/scss/_breadcrumb.scss */
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: none; }
-
-/* line 38, node_modules/bootstrap/scss/_breadcrumb.scss */
-.breadcrumb-item.active {
-  color: #6c757d; }
+.card-columns .card {
+  margin-bottom: 1.25rem; }
 
 /* line 1, node_modules/bootstrap/scss/_pagination.scss */
 .pagination {
@@ -5545,7 +5461,7 @@ input[type="button"].btn-block {
   .badge-gray200[href]:hover, .badge-gray200[href]:focus {
     color: #212529;
     text-decoration: none;
-    background-color: #383838; }
+    background-color: #d5d5d5; }
 
 /* line 1, node_modules/bootstrap/scss/_jumbotron.scss */
 .jumbotron {
@@ -6191,7 +6107,8 @@ button.close {
   z-index: 1050;
   display: none;
   overflow: hidden;
-  outline: 0; }
+  outline: 0;
+}
   /* line 29, node_modules/bootstrap/scss/_modal.scss */
   .modal-open .modal {
     overflow-x: hidden;
@@ -6243,7 +6160,7 @@ button.close {
           flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #fff;
+  background-color: black;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
@@ -6287,6 +6204,7 @@ button.close {
 
 /* line 109, node_modules/bootstrap/scss/_modal.scss */
 .modal-title {
+  color: white;
   margin-bottom: 0;
   line-height: 1.5; }
 
@@ -6939,7 +6857,7 @@ button.bg-light:focus {
 
 /* line 6, node_modules/bootstrap/scss/mixins/_background-variant.scss */
 .bg-dark {
-  background-color: #343a40 !important; }
+  background-color: #040505 !important; }
 
 /* line 17, node_modules/bootstrap/scss/mixins/_hover.scss */
 a.bg-dark:hover, a.bg-dark:focus,
@@ -7029,7 +6947,7 @@ button.bg-gray200:focus {
 
 /* line 13, node_modules/bootstrap/scss/utilities/_background.scss */
 .bg-white {
-  background-color: #383838 !important; }
+  background-color: #fff !important; }
 
 /* line 17, node_modules/bootstrap/scss/utilities/_background.scss */
 .bg-transparent {
