--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,7 +10,7 @@
     <a class="nav-link" href="{{site.baseurl}}/web-concepts-library/">Post</a>
 </li> -->
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+    <a class="nav-link" href="mailto:someone@example.com">Contact</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/about.html">About</span></a>
