--- a/_includes/footer-social.html
+++ b/_includes/footer-social.html
@@ -3,7 +3,7 @@
 <!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.facebook.com/wowthemesnet" class="text-white"><i class="fab fa-facebook-f"></i></a> -->
 </li>
 
-<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.linkedin.com/in/rodcasnog/" class="text-white"><i class="fab fa-linkedin"></i></a></li>
+<!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.linkedin.com/in/rodcasnog/" class="text-white"><i class="fab fa-linkedin"></i></a></li> -->
 
 <!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://twitter.com/wowthemesnet" class="text-white"><i class="fab fa-twitter"></i></a></li> -->
 
