--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,9 +30,9 @@ layout: default
                             , by {{page.author | capitalize}} 
                         {% endif %}
                     </small>                    
-                    
+                    <div class="post-content">        
     				{{ content }}
-                    
+                    </div class="post-content">
                     {% if page.visit %}
                     <p><a target="_blank" href="{{page.visit}}" class="btn btn-gray d-block font-weight-bold">
                         Visit <i class="fas fa-external-link-alt"></i></a>
