--- a/_includes/card-post.html
+++ b/_includes/card-post.html
@@ -28,10 +28,10 @@
             {% endfor %}
          </div>
     </div> -->
-    <!-- <a href="{{site.baseurl}}{{post.url}}"> -->
+    <a href="{{site.baseurl}}{{post.url}}">
         <img class="card-img" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %}" alt="{{ post.title }}">
-        <!-- <div class="card-title"> -->
-            <!-- <h4>{{ post.title }}</h4> -->
+        <div class="card-title">
+            <h4>{{ post.title }}</h4>
             <!-- <div class="more">                
                 <i class="fa fa-arrow-circle-right text-muted" aria-hidden="true"></i>
             </div>   -->
