--- a/_includes/card-post.html
+++ b/_includes/card-post.html
@@ -28,7 +28,7 @@
             {% endfor %}
          </div>
     </div> -->
-    <a href="{{site.baseurl}}{{post.url}}">
+    <a href="">
         <img class="card-img" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %}" alt="{{ post.title }}">
     </a>    
     {% endif %}
