--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,6 +4,12 @@
     <a class="nav-link active" href="{{site.baseurl}}/index.html">Home</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/flash.html">Flash</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/oneanddone.html">oneanddone</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/categories.html">Categories</a>
 </li>
 <!-- <li class="nav-item">
