--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,7 +4,7 @@
     <a class="nav-link active" href="{{site.baseurl}}/index.html">Home</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/flash/index.html">Flash</a>
+    <a class="nav-link" href="{{site.baseurl}}/flash.html">Flash</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/oneanddone.html">oneanddone</a>
