flah=sh and oad

--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
     <a class="nav-link" href="{{site.baseurl}}/flash.html">Flash</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/oneanddone.html">oneanddone</a>
+    <a class="nav-link" href="{{site.baseurl}}/oneanddone.html">One And Done</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/categories.html">Categories</a>
