--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -430,3 +430,25 @@ a.next {
 .highlight {
   background-color: #f8f8f8;
 }
+
+@media (min-width: 900px) {
+  /* line 256, node_modules/bootstrap/scss/_card.scss */
+  .card-columns {
+    -webkit-column-count: 4;
+            column-count: 4;
+    -webkit-column-gap: 1.25rem;
+            column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1; }
+}
+
+@media (min-width: 576px) {
+  /* line 256, node_modules/bootstrap/scss/_card.scss */
+  .card-columns {
+    -webkit-column-count: 3;
+            column-count: 3;
+    -webkit-column-gap: 1.25rem;
+            column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1; }
+}
