--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
 <body class="bg-dark text-white">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/{{site.logo}}" alt="Morgan Diann Tattoo"></a>
-    <button class="navbar-dark navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand font-weight-bolder mr-3" href="{{site.baseurl}}/">Morgan Diann Tattoo</a>
+      <button class="navbar-dark navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarsDefault">        
