--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4551,7 +4551,7 @@ input[type="button"].btn-block {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 2rem;
   line-height: inherit;
   white-space: nowrap; 
   width: 300px;}
@@ -8444,7 +8444,7 @@ button.bg-gray200:focus {
 /* line 17, node_modules/bootstrap/scss/utilities/_spacing.scss */
 .mr-3,
 .mx-3 {
-  margin-right: 1rem !important; }
+   }
 
 /* line 21, node_modules/bootstrap/scss/utilities/_spacing.scss */
 .mb-3,
