--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,16 +1,16 @@
 <!--  Replace top menu links here -->
 
 <li class="nav-item">
-    <a class="nav-link active" href="{{site.baseurl}}/index.html">Home</a>
+    <a class="nav-link active" href="{{site.baseurl}}/">Home</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/flash.html">Flash</a>
+    <a class="nav-link" href="{{site.baseurl}}/flash">Flash</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/oneanddone.html">One And Done</a>
+    <a class="nav-link" href="{{site.baseurl}}/oneanddone">One And Done</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/about.html">About</span></a>
+    <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href=https://form.jotform.com/241105819271149>Book</span></a>
