one and done fix

--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
     <a class="nav-link" href="{{site.baseurl}}/flash">Flash</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/oneanddone">One And Done</a>
+    <a class="nav-link" href="{{site.baseurl}}/one_and_done">One and Done</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
