--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,6 +10,9 @@
     <a class="nav-link" href="{{site.baseurl}}/one_and_done">One & Done</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/work">Previous Work</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
 </li>
 <li class="nav-item">
