--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -3,6 +3,20 @@
 <li class="nav-item">
     <a class="nav-link active" href="{{site.baseurl}}/">Home</a>
 </li>
+<li class="nav-item dropdown"></li>
+	<a class="nav-link dropdown-toggle" href="#" id="workDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work ▼</a>
+	<div class="dropdown-menu" aria-labelledby="workDropdown">
+		<a class="dropdown-item" href="{{site.baseurl}}/flash">Flash</a>
+		<a class="dropdown-item" href="{{site.baseurl}}/one_and_done">One & Done</a>
+		<a class="dropdown-item" href="{{site.baseurl}}/work">Previous Work</a>
+	</div>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href=https://form.jotform.com/241105819271149>Book</span></a>
+</li>
 <li class="nav-item dropdown">
 	<a class="nav-link" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 	<div class="dropdown-menu dropdown-menu-right shadow-lg" aria-labelledby="dropdown02">
@@ -12,10 +26,4 @@
 			<a class="dropdown-item" href="{{site.baseurl}}/work">Previous Work</a>
 		</span>
 	</div>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href=https://form.jotform.com/241105819271149>Book</span></a>
 </li>
