--- a/_includes/footer-social.html
+++ b/_includes/footer-social.html
@@ -1,6 +1,6 @@
 <!--  Replace footer social links here -->
 
-<!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.facebook.com/wowthemesnet" class="text-white"><i class="fab fa-facebook-f"></i></a> -->
+<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.instagram.com/morgandianntattoo/" class="text-white"><i class="fab fa-instagram"></i></a>
 </li>
 
 <!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.linkedin.com/in/rodcasnog/" class="text-white"><i class="fab fa-linkedin"></i></a></li> -->
