--- a/_includes/footer-social.html
+++ b/_includes/footer-social.html
@@ -2,9 +2,9 @@
 
 <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.instagram.com/morgandianntattoo/" class="text-white"><i class="fab fa-instagram"></i></a></li>
 
-<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.threads.net/@morgandianntattoo" class="text-white"><i class="fab fa-threads"></i></a></li>
+<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://www.threads.net/@morgandianntattoo" class="text-white"><i class="fa-brands fa-threads"></i></a></li>
 
-<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://tiktok.com/@morgandianntattoo" class="text-white"><i class="fab fa-tiktok"></i></a></li>
+<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://tiktok.com/@morgandianntattoo" class="text-white"><i class="fa-brands fa-tiktok"></i></a></li>
 
-<!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://plus.google.com/" class="text-white"><i class="fab fa-google-plus"></i></a>
+<!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://plus.google.com/" class="text-white"><i class="fab fa-google-plus"></i></a><i class="fa-brands fa-tiktok"></i>
 </li> -->
