--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,13 @@
     
     <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/{{site.favicon}}">
     
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/fontawesome.js" integrity="sha384-dPBGbj4Uoy1OOpM4+aRGfAOc0W37JkROT+3uynUgTHZCHZNMHfGXsmmvYTffZjYO" crossorigin="anonymous"></script>
-  
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script> -->
+
+    <script
+    src="https://use.fontawesome.com/releases/v6.7.2/js/all.js"
+    data-auto-a11y="true"
+  ></script>
+
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.css">
     
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/theme.css">
