--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -14,6 +14,9 @@
 	</div>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/popups">Pop-ups</span></a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
 </li>
 <li class="nav-item">
