--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -377,7 +377,8 @@ h1, h2, h3, h4, h5, h6,
 
 /* line 16, node_modules/bootstrap/scss/_type.scss */
 h1, .h1 {
-  font-size: 2.5rem; }
+  font-size: 2.5rem; 
+  font-family: "EB Garamond", serif;}
 
 /* line 17, node_modules/bootstrap/scss/_type.scss */
 h2, .h2 {
