--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -20,5 +20,8 @@
     <a class="nav-link" href="{{site.baseurl}}/about">About</span></a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href=https://www.mainlinetattoo.com/aftercare>Aftercare</span></a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href=https://form.jotform.com/241105819271149>Book</span></a>
 </li>
