--- a/_includes/footer-social.html
+++ b/_includes/footer-social.html
@@ -6,5 +6,7 @@
 
 <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://tiktok.com/@morgandianntattoo" class="text-white"><i class="fa-brands fa-tiktok"></i></a></li>
 
+<li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://bsky.app/profile/morgandiann.bsky.social" class="text-white"><i class="fa-brands fa-bluesky"></i></a></li>
+
 <!-- <li class="d-inline-block ml-1 mr-1"><a target="_blank" href="https://plus.google.com/" class="text-white"><i class="fab fa-google-plus"></i></a><i class="fa-brands fa-tiktok"></i>
 </li> -->
