red link lighter

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -172,7 +172,7 @@ sup {
 
 /* line 198, node_modules/bootstrap/scss/_reboot.scss */
 a {
-  color: #fd0100;
+  color: #ff7878;
   text-decoration: none;
   background-color: transparent;
   /* -webkit-text-decoration-skip: objects; */
